// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeMapArrowService Arrow Behaviour when selecting and hovering a building should only highlight small leaf when big leaf is selected 1`] = `undefined`;

exports[`CodeMapArrowService Arrow Behaviour when selecting and hovering a building should only highlight small leaf when big leaf is selected 2`] = `
CodeMapBuilding {
  "_boundingBox": {
    "max": [
      -Infinity,
      -Infinity,
      -Infinity,
    ],
    "min": [
      Infinity,
      Infinity,
      Infinity,
    ],
  },
  "_color": "#EB8319",
  "_defaultColor": "#ddcc00",
  "_defaultDeltaColor": "#000000",
  "_deltaColor": "#EB8319",
  "_dimmedColorVector": Vector3 {
    "x": 0.4588235294117647,
    "y": 0.4235294117647059,
    "z": 0,
  },
  "_dimmedDeltaColorVector": Vector3 {
    "x": 0.10196078431372549,
    "y": 0.10196078431372549,
    "z": 0.10196078431372549,
  },
  "_highlightedColorVector": Vector3 {
    "x": 1,
    "y": 0.9215686274509803,
    "z": 0.058823529411764705,
  },
  "_highlightedDeltaColorVector": Vector3 {
    "x": 0.10196078431372549,
    "y": 0.10196078431372549,
    "z": 0.10196078431372549,
  },
  "_id": 1,
  "_node": {
    "attributes": {
      "a": 20,
      "b": 15,
      "mcc": 14,
    },
    "color": "#AABBCC",
    "deltas": {
      "a": 1,
      "b": 2,
    },
    "depth": 4,
    "edgeAttributes": {
      "a": {
        "incoming": 2,
        "outgoing": 666,
      },
    },
    "flat": false,
    "height": 2,
    "heightDelta": 20,
    "id": 1,
    "incomingEdgePoint": Vector3 {
      "x": 1,
      "y": 2,
      "z": 3,
    },
    "isLeaf": true,
    "length": 3,
    "link": "NO_LINK",
    "mapNodeDepth": 2,
    "markingColor": "0xFFFFFF",
    "name": "root/big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 1,
      "y": 2,
      "z": 3,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 1,
    "x0": 5,
    "y0": 7,
    "z0": 6,
  },
}
`;

exports[`CodeMapArrowService Arrow Behaviour when selecting and hovering a building should restore to previous color if another building is selected in delta mode 1`] = `
CodeMapBuilding {
  "_boundingBox": {
    "max": [
      -Infinity,
      -Infinity,
      -Infinity,
    ],
    "min": [
      Infinity,
      Infinity,
      Infinity,
    ],
  },
  "_color": "#EB8319",
  "_defaultColor": "#ddcc00",
  "_defaultDeltaColor": "#000000",
  "_deltaColor": "#EB8319",
  "_dimmedColorVector": Vector3 {
    "x": 0.4588235294117647,
    "y": 0.4235294117647059,
    "z": 0,
  },
  "_dimmedDeltaColorVector": Vector3 {
    "x": 0.10196078431372549,
    "y": 0.10196078431372549,
    "z": 0.10196078431372549,
  },
  "_highlightedColorVector": Vector3 {
    "x": 1,
    "y": 0.9215686274509803,
    "z": 0.058823529411764705,
  },
  "_highlightedDeltaColorVector": Vector3 {
    "x": 0.10196078431372549,
    "y": 0.10196078431372549,
    "z": 0.10196078431372549,
  },
  "_id": 2,
  "_node": {
    "attributes": {
      "a": 20,
      "b": 15,
      "mcc": 100,
    },
    "color": "#820E0E",
    "deltas": {
      "a": 1,
      "b": 2,
    },
    "depth": 4,
    "edgeAttributes": {
      "a": {
        "incoming": 2,
        "outgoing": 666,
      },
    },
    "flat": false,
    "height": 2,
    "heightDelta": 20,
    "id": 2,
    "incomingEdgePoint": Vector3 {
      "x": 1,
      "y": 2,
      "z": 3,
    },
    "isLeaf": true,
    "length": 3,
    "link": "NO_LINK",
    "mapNodeDepth": 2,
    "markingColor": "0xFFFFFF",
    "name": "root/small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 1,
      "y": 2,
      "z": 3,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 1,
    "x0": 5,
    "y0": 7,
    "z0": 6,
  },
}
`;

exports[`CodeMapArrowService Arrow Behaviour when selecting and hovering a building should restore to previous color if another building is selected in delta mode 2`] = `
CodeMapBuilding {
  "_boundingBox": {
    "max": [
      6,
      8,
      10,
    ],
    "min": [
      5,
      6,
      7,
    ],
  },
  "_color": "#AABBCC",
  "_defaultColor": "#AABBCC",
  "_defaultDeltaColor": "#000000",
  "_deltaColor": "#000000",
  "_dimmedColorVector": Vector3 {
    "x": 0.4117647058823529,
    "y": 0.5294117647058824,
    "z": 0.6470588235294118,
  },
  "_dimmedDeltaColorVector": Vector3 {
    "x": 0.10196078431372549,
    "y": 0.10196078431372549,
    "z": 0.10196078431372549,
  },
  "_highlightedColorVector": Vector3 {
    "x": 0.788235294117647,
    "y": 0.8313725490196079,
    "z": 0.8705882352941177,
  },
  "_highlightedDeltaColorVector": Vector3 {
    "x": 0.10196078431372549,
    "y": 0.10196078431372549,
    "z": 0.10196078431372549,
  },
  "_id": 0,
  "_node": {
    "attributes": {
      "a": 20,
      "b": 15,
      "mcc": 14,
    },
    "color": "#AABBCC",
    "deltas": {
      "a": 1,
      "b": 2,
    },
    "depth": 4,
    "edgeAttributes": {
      "a": {
        "incoming": 2,
        "outgoing": 666,
      },
    },
    "flat": false,
    "height": 2,
    "heightDelta": 20,
    "id": 1,
    "incomingEdgePoint": Vector3 {
      "x": 1,
      "y": 2,
      "z": 3,
    },
    "isLeaf": true,
    "length": 3,
    "link": "NO_LINK",
    "mapNodeDepth": 2,
    "markingColor": "0xFFFFFF",
    "name": "root/big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 1,
      "y": 2,
      "z": 3,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 1,
    "x0": 5,
    "y0": 7,
    "z0": 6,
  },
}
`;
